refactor: use Stream.toList() for immutable results in council/menu domain